# volta-memory

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  DEMO_RUNBOOK.md  EVALUATION.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  docker-compose.yml  migrate.sh  s.single-origin.yaml  s.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py
backend/app/api/: contracts.py  routes_chat.py  routes_eval.py  routes_memory_debug.py  routes_v1.py  serializers.py
backend/app/chat/: __init__.py  qwen_client.py  session.py  tokenizer.py  volta_prompt.py
backend/app/memory/: __init__.py  clarification.py  consolidation.py  contradiction.py  decay.py  embeddings.py  explainability.py  extraction.py  importance.py  meta_memory.py  models.py  plausibility.py  (+5 more)
backend/config/: domain_constraints.yaml
backend/eval/: BENCHMARK_SPEC.md  artifacts.py  ground_truth.py  importance_validation.py  importance_validation_labels.json  metrics.py  run_eval.py  sweep.py
backend/migrations/: 001_initial.sql  002_add_cross_session_count.sql  003_hybrid_retrieval_and_priors.sql  004_product_foundation.sql  005_explain_trace_retrieval_audit.sql  006_session_extraction_lease.sql
backend/tests/: test_chaos.py  test_clarification_matrix.py  test_concurrency.py  test_contradiction_handling.py  test_hybrid_retrieval.py  test_mcp_server.py  test_memory_decay.py  test_memory_retrieval.py  test_population_priors.py  test_product_foundation.py  test_stability_growth.py  test_streaming.py  test_study_coach.py
(+127 files in other folders)
