[project]
name = "volta-memory-backend"
version = "0.1.0"
description = "Volta Memory — persistent typed memory for conversational agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "psycopg[binary,pool]>=3.2.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
alibaba = [
    "alibabacloud-ecs20140526>=4.0.0",
    "alibabacloud-tea-openapi>=0.3.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
